--- a/css/estilo.css
+++ b/css/estilo.css
@@ -2,7 +2,7 @@ body {
    /*background-image: url(../img/R.jfif);*/
    width: 950px;
    height: 1500;
-   background-color: rgb(224, 224, 224);
+   background-color: rgb(0, 0, 0);
 }
 
 #principal{
@@ -115,6 +115,7 @@ body {
     height: 600px;
     margin-top: 20px;
     margin-left: 10px;
+    color: black;
 }
 
 #banner {
@@ -146,7 +147,7 @@ body {
     left: 1%;
     top: 115%;
     position: absolute;
-    
+    color: black;
 }
 
 #quinto {
@@ -169,6 +170,7 @@ body {
     position: absolute;
     /*box-shadow: 1px 40px 80px rgb(0, 0, 0);*/
     background-color: rgba(0, 0, 0, 0);
+    color: black;
 }
 
 #sexto {
@@ -192,6 +194,7 @@ body {
     position: absolute;
     /*box-shadow: 1px 40px 80px rgb(0, 0, 0);*/
     background-color: rgba(0, 0, 0, 0);
+    color: black;
 }
 
 #cor {
@@ -214,6 +217,7 @@ body {
     position: absolute;
     /*box-shadow: 1px 40px 80px rgb(0, 0, 0);*/
     background-color: rgba(0, 0, 0, 0);
+    color: black;
 }
 
 #gustavo {
@@ -223,6 +227,7 @@ body {
     left: 1%;
     top: 195%;
     position: absolute;
+    color: black;
 }
 
 #menu h1 {
