adicionei texto no title

--- a/css/estilo.css
+++ b/css/estilo.css
@@ -294,13 +294,13 @@ header img {
 }
 
 p {
-    color: black;
+    color: rgb(255, 255, 255);
 }
 
 li {
-    color: black;
+    color: rgb(255, 255, 255);
 
 }
 h1 {
-    color: black;
+    color: rgb(255, 255, 255);
 }
