--- a/css/estilo.css
+++ b/css/estilo.css
@@ -158,7 +158,7 @@ body {
     top: 20%;
     position: absolute;
     background-image: url(../img/polo2.webp);
-    box-shadow: 1px 40px 80px rgb(0, 0, 0);
+    box-shadow: 1px 40px 80px rgb(255, 255, 255);
 }
 
 #polo {
@@ -168,7 +168,7 @@ body {
     left: 6%;
     top: 60%;
     position: absolute;
-    box-shadow: 1px 40px 80px rgb(255, 255, 255);
+    /*box-shadow: 1px 40px 80px rgb(255, 255, 255);*/
     background-color: rgba(0, 0, 0, 0);
     color: black;
 }
