--- a/css/estilo.css
+++ b/css/estilo.css
@@ -54,7 +54,7 @@ body {
 }
 
 #gu h2 a {
-    color: rgb(22, 50, 126);
+    color: rgb(255, 255, 255);
 }
 
 #odizio {
@@ -137,6 +137,10 @@ body {
     top: 17%;
     position: absolute;
     color: rgb(255, 255, 255);
+}
+
+#terceiro h1 {
+    color: aliceblue;
 }
 
 #quarto {
