--- a/css/estilo.css
+++ b/css/estilo.css
@@ -9,8 +9,9 @@ body {
     
     width: 1560px;
     height: 180px;
-    background-color: rgba(22, 39, 46, 0.26);
+    background-color: rgba(7, 11, 12, 0.144);
     position:relative;
+    box-shadow: 1px 30px 60px rgb(0, 89, 255);
 }
 
 
@@ -137,6 +138,7 @@ body {
     top: 17%;
     position: absolute;
     color: rgb(255, 255, 255);
+    
 }
 
 #terceiro h1 {
