--- a/css/estilo.css
+++ b/css/estilo.css
@@ -7,7 +7,7 @@ body {
 
 #principal{
     
-    width: 1560px;
+    width: 100%;
     height: 180px;
     background-color: rgba(7, 11, 12, 0.144);
     position:relative;
