--- a/css/estilo.css
+++ b/css/estilo.css
@@ -7,9 +7,9 @@ body {
 
 #principal{
     
-    width: 100%;
+    width: 1560px;
     height: 180px;
-    background-color: rgba(7, 11, 12, 0.144);
+    background-color: rgba(7, 11, 12, 0);
     position:relative;
     box-shadow: 1px 30px 60px rgb(0, 89, 255);
 }
