--- a/css/servico.css
+++ b/css/servico.css
@@ -2,14 +2,14 @@ body {
     /*background-image: url(../img/R.jfif);*/
     width: 950px;
     height: 1500;
-    background-color: rgb(255, 255, 255);
+    background-color: rgb(83, 83, 83);
  }
  
  #principal{
      
      width: 1560px;
      height: 180px;
-     background-color: rgba(13, 136, 184, 0.295);
+     
      position:relative;
  }
  
@@ -36,7 +36,7 @@ body {
  
  #primeiro h1 {
      text-align: center;
-     color: rgb(22, 50, 126);
+     color: rgb(0, 89, 255);
  }
  
  #gu {
@@ -50,11 +50,11 @@ body {
  
  #gu h3 {
      text-align: center;
-     color: rgb(22, 50, 126);
+     color: rgb(0, 89, 255);
  }
  
  #gu h2 a {
-     color: rgb(22, 50, 126);
+     color: rgb(0, 89, 255);
  }
  
  #odizio {
@@ -93,7 +93,7 @@ body {
  }
  
  #em h1 {
-     color: rgb(22, 50, 126);
+     color: rgb(0, 89, 255);
  }
  
  #lugar {
@@ -105,8 +105,12 @@ body {
      position: absolute;
  }
  
+ li {
+    color: rgb(0, 89, 255);
+ }
+
  .ofertas {
-     color: rgb(22, 50, 126);
+     color: rgb(0, 89, 255);
  }
  
  #segundo {
@@ -119,21 +123,27 @@ body {
  }
  #garantia {
     /*border: 5px solid rgb(0, 0, 0) ;*/
-    width: 680px;
+    width: 670px;
     height: 600px;
     top: 137%;
     left: 55%;
     position: absolute;
  }
 
+ #garantia:hover {
+    transform: scale(1.1);
+    transform: all 0.2s;
+    cursor: pointer;
+ }
+
  #garantia h1 {
     text-align: center;
-     color: rgb(22, 50, 126);
+     color: rgb(0, 89, 255);
  }
 
  #garantia h2 {
     
-     color: rgb(22, 50, 126);
+     color: rgb(0, 89, 255);
  }
  
  #banner {
@@ -154,7 +164,7 @@ body {
      left: 38%;
      top: 17%;
      position: absolute;
-     color: rgb(22, 50, 126);
+     color: rgb(0, 89, 255);
  }
  
  #quarto {
@@ -180,7 +190,7 @@ body {
  }
  
  #polo {
-     border: ;
+    
      height: 100px;
      width: 360px;
      left: 6%;
@@ -203,7 +213,7 @@ body {
  }
  
  #jetta {
-     border: ;
+     
      height: 100px;
      width: 360px;
      left: 36%;
@@ -225,7 +235,7 @@ body {
  }
  
  #golf {
-      border: ;
+
      height: 100px;
      width: 360px;
      left: 66%;
@@ -242,17 +252,17 @@ body {
      left: 0;
      top: 230%;
      position: absolute;
-     background-color: rgba(13, 136, 184, 0.295);
+    
  }
  
  #menu h1 {
-    color: rgb(22, 50, 126);
+    color: rgb(0, 89, 255);
      text-align: center;
  
  }
 
  #sobre {
-     border: 3px solid rgb(22, 50, 126);
+     border: 3px solid rgb(0, 89, 255);
      width: 200px;
      height: 1400px;
      top: 35%;
@@ -265,13 +275,13 @@ body {
  }
  
  #sobre h1 {
-    color: rgb(22, 50, 126);
+    color: rgb(0, 89, 255);
      text-align: center;
      
  }
 
  #sobre h2 {
-    color: rgb(22, 50, 126);
+    color: rgb(0, 89, 255);
     
  }
 
@@ -308,7 +318,7 @@ body {
  
  a {
      text-decoration:none;
-     color: rgb(15, 30, 71);
+     color: rgb(255, 255, 255);
  }
  #volta {
     
@@ -319,6 +329,13 @@ body {
      text-align: center;
  
  }
+
+ #menu:hover {
+    transform: scale(1.1);
+    transform: all 0.2s;
+    cursor: pointer;
+}
+ 
  
  #logo {
      width: 100px;
@@ -330,4 +347,8 @@ body {
  header img {
      width: 150px;
      height: 100px;
+ }
+
+ p {
+    color: aliceblue;
  }
