--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,373 +1,101 @@
 body {
-   /*background-image: url(../img/R.jfif);*/
-   width: 950px;
-   height: 1500;
-   /*background-color: rgb(83, 83, 83);*/
-   background-color: rgb(83, 83, 83);
+    font-family: Arial, Helvetica, sans-serif;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    background-color: black;
 }
 
-#principal{
+header {
+ 
     
-    width: 1560px;
-    height: 180px;
-    /*background-color: rgba(3, 3, 3, 0.034);*/
-    position:relative;
-    /*box-shadow: 1px 30px 60px rgb(0, 89, 255);*/
-}
-
-
-#cabesario {
-    /*border: 5px solid rgb(0, 0, 0);*/
-    width: 180px;
-    height: 180px;
-    top: 9px;
-    left: 1%;
-   position: absolute;
-    background-image: url(../img/logo2.png);
-    
-}
-
-#primeiro {
-    /*border: 5px solid rgb(0, 0, 0);*/
-    width: 200px;
-    height: 40px;
-    top: 5%;
-    left:13%;
-    position: absolute;
-}
-
-#primeiro h1 {
+    margin: 0 auto;
+    padding: 20px;
+    background-color: red;
+    color: white;
     text-align: center;
-    color: rgb(0, 89, 255);
 }
 
-#gu {
-    /*border: 5px solid rgb(0, 0, 0);*/
-    width: 400px;
-    height: 40px;
-    top: 5%;
-    left:60%;
-    position: absolute;
-}
-
-#gu h3 {
+nav {
     text-align: center;
-    color: rgb(255, 255, 255);
-}
-
-#gu h2 a {
-    color: rgb(255, 255, 255);
-}
-
-#odizio {
-    /*border: 5px solid rgb(0, 0, 0);*/
-    width: 1300px;
-    height: 100px;
-    top: 12%;
-    left: 13%;
-    position: absolute;
-}
-
-#odizio h2 {
-    color: black;
-}
-
-#gco {
-    /*border: 5px solid rgb(0, 0, 0);*/
-    width: 400px;
-    height: 60px;
-    top: 40%;
-    left: 7%;
-    position: absolute;
-}
-
-.campos {
-    color: rgb(0, 89, 255);
-}
-
-#em {
-    height: 60px;
-    width: 450px;
-    left: 38%;
-    top: 12%;
-    position: absolute;
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 20px;
+    background-color: rgb(252, 53, 53);
     
 }
 
-#em h1 {
-    color: rgb(22, 50, 126);
-}
-
-#lugar {
-    /*border: 5px solid rgb(0, 0, 0);*/
-    width: 375px;
-    height: 40px;
-    top: 58%;
-    left: 71%;
-    position: absolute;
-}
-
-.ofertas {
-    color: rgb(0, 89, 255);
-}
-
-#segundo {
-    /*border: 5px solid rgb(0, 0, 0) ;*/
-    width: 465px;
-    height: 600px;
-    margin-top: 20px;
-    margin-left: 10px;
-    color: black;
-}
-
-#banner {
-    /*border: 5px solid rgb(0, 0, 0);*/
-    height: 600px;
-    width: 1000px;
-    left: 33%;
-    top: 29%;
-    position: absolute;
-    /*background-image: url(../img/1.jfif);
-    box-shadow: 1px 40px 80px rgb(0, 0, 0);*/
-}
-
-#terceiro {
-    /*border: 5px solid rgb(0, 0, 0);*/
-    height: 60px;
-    width: 450px;
-    left: 38%;
-    top: 17%;
-    position: absolute;
-    color: rgb(255, 255, 255);
+nav a {
+    color: white;
+    text-decoration: dashed;
     
 }
 
-#terceiro h1 {
+footer {
+    
+    text-align: center;
+    margin: 0 auto;
+    padding: 20px;
+    background-color: red;
     color: aliceblue;
 }
 
-#quarto {
-    /*background-image: url(../img/xplogo41280.jpg);*/
-    /*border: 5px solid rgb(0, 0, 0);*/
-    height: 600px;
-    width: 1507px;
-    left: 1%;
-    top: 115%;
-    position: absolute;
-    color: black;
+main {
+    
+    margin: 0 auto;
+    padding: 20px;
 }
 
-a {
+#seção1 {
+    
+    text-align: center;
+    color: white;
+    
+}
+
+h1 {
     color: aliceblue;
+    
 }
 
-#quinto {
-    /*border: 5px solid rgb(0, 0, 0);*/
-    height: 222px;
-    width: 360px;
-    left: 6%;
-    top: 20%;
-    position: absolute;
-    background-image: url(../img/polo2.webp);
-    box-shadow: 1px 30px 60px rgb(0, 89, 255);
+h3 {
+    color: aliceblue;
+    text-align: center;
 }
 
-    #quinto:hover {
-        transform: scale(1.1);
-    transform: all 0.2s;
-    cursor: pointer;
-    }
-
-#polo {
-    height:100px;
-    width: 360px;
-    left: 6%;
-    top: 60%;
-    position: absolute;
-    /*box-shadow: 1px 40px 80px rgb(255, 255, 255);*/
-    /*background-color: rgba(0, 0, 0, 0);*/
-    color: black;
-}
-
-#polo:hover {
-    transform: scale(1.1);
-    transform: all 0.2s;
-    cursor: pointer;
-}
-
-#sexto {
-    /*border: 5px solid rgb(0, 0, 0);*/
-    height: 222px;
-    width: 360px;
-    left: 36%;
-    top: 20%;
-    position: absolute;
-    background-image: url(../img/jeta5.jpg@!thumbnail);
-    /*background-color: brown;*/
-    box-shadow: 1px 30px 60px rgb(0, 89, 255);
-}
-
-#sexto:hover {
-    transform: scale(1.1);
-    transform: all 0.2s;
-    cursor: pointer;
-}
-
-#jetta {
-    height:100px;
-    width: 360px;
-    left: 36%;
-    top: 60%;
-    position: absolute;
-    /*box-shadow: 1px 40px 80px rgb(0, 0, 0);*/
-    background-color: rgba(0, 0, 0, 0);
-    color: black;
-}
-
-#jetta:hover {
-    transform: scale(1.1);
-    transform: all 0.2s;
-    cursor: pointer;
+h2 {
+    color: white;
+    text-align: center;
 }
 
 #cor {
-    /*border: 5px solid rgb(0, 0, 0);*/
-    height: 222px;
-    width: 360px;
-    left: 66%;
-    top: 20%;
-    position: absolute;
-    background-image: url(../img/golf.jpg);
-    box-shadow: 1px 30px 60px rgb(0, 89, 255);
-}
-
-#cor:hover {
-    transform: scale(1.1);
-    transform: all 0.2s;
-    cursor: pointer;
-
-}
-
-#golf {
-    height:100px;
-    width: 360px;
-    left: 66%;
-    top: 60%;
-    position: absolute;
-    /*box-shadow: 1px 40px 80px rgb(0, 0, 0);*/
-    /*background-color: rgba(0, 0, 0, 0);*/
-    color: black;
-}
-
-#golf:hover {
-    transform: scale(1.1);
-    transform: all 0.2s;
-    cursor: pointer;
-}
-
-#gustavo {
-    /*border: 5px solid rgb(0, 0, 0);*/
-    height: 267px;
-    width: 1510px;
-    left: 1%;
-    top: 195%;
-    position: absolute;
-    color: black;
-}
-
-#menu h1 {
-    color: rgb(0, 89, 255);
-    text-align: center;
-
-}
-
-#terceiro h1 {
-    color: rgb(0, 0, 0);
-    text-align: center;
-
-}
-
-#polo h1 {
-    color: rgb(255, 255, 255);
-    text-align: center;
-
-}
-
-#jetta h1 {
-    color: rgb(255, 255, 255);
-    text-align: center;
-
-}
-
-#golf h1 {
-    color: rgb(255, 255, 255);
-    text-align: center;
-
+    color: red;
 }
 
 
-
-#contas {
-    color: rgb(255, 255, 255);
-    text-align: center;
-}   
-
-a {
-    text-decoration:none;
-    color: rgb(255, 255, 255);
-}
-#volta {
-   
-    text-align: center;
-}
-
-#menu {
-    text-align: center;
-    color: aliceblue;
-}
-
-#menu:hover {
-    transform: scale(1.1);
-    transform: all 0.2s;
-    cursor: pointer;
-}
-
-#logo {
-    width: 100px;
-    height: 100px;
-    border: 4px solid black;
-    background-image: url(../img/logo.png);
-}
-
-header img {
+#fazer {
     width: 150px;
-    height: 100px;
+    height: 30px;
+    background-color: red;
+    border: 2px solid black;
+    color: white;
 }
 
-p {
-    color: rgb(255, 255, 255);
+#cola {
+    color: black;
 }
 
-li {
-    color: rgb(255, 255, 255);
-
-}
-h1 {
-    color: rgb(255, 255, 255);
+#grande {
+    color: yellow;
+    text-align: center;
 }
 
-hr {
-    color: aqua;
-}
+@media screen and (max-width: 600px){
+    body {
+        font-size: 14px;
+    }
 
-#lugar h3 {
-    color: aliceblue;
-}
-
-#gco h2 {
-    color: aliceblue;
-}
-
-#terceiro h1 {
-    color: aliceblue;
+    #seção1 {
+        text-align: center;
+    }
 }
